experimental/parser/testdata/parser/package/no_path.proto.stderr.txt
error: missing path in `package` declaration
  --> testdata/parser/package/no_path.proto:17:1
   | 
17 | package;
   | ^^^^^^^^ 
   = help: to place a file in the empty package, remove the `package` declaration
   = help: however, using the empty package is discouraged

encountered 1 error
